--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,6 @@ steps:
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish artifacts: drop'
+- task: gitsync@1
+  inputs:
+    GitRepoUrl: 'https://$(GithubAccessToken)@github.com/StateOfCalifornia/calvolunteer-api.git'
